static/css/theme.less
/* ... */
/*-- exploring --------------------------------------------------*/
body.exploring                  {
    div#masthead                {display: none;
    }
    main                            {z-index:1;
        #page                       {background-size: auto 100%;
            div#loading-mask            {display: none;
                                         position: absolute;
                                         background-color: rgba(0,0,0,0.6);
                                         width: 100%;
                                         height: 100%;
            }
            #town_map                   {height:500px;
                                         margin:0 auto;
            }
            .admin-panel                {position:absolute;
                                         width:300px;
                                         height:300px;
                                         top:0;
                                         left: -280px;
                                         background-color: @black;
                                         color: @white;
                                         z-index:100;
                                         padding-left: @line-height-computed;
                &:hover                 {left:0;}
                h3                      {color: @white;}
                input[type=text]        {width: 60%;}
            }
            .speaker                    {position: absolute;
                img                     {}
            }
            .prompt,
            .responder                  {background-color: #fff;
                                         position: relative;
                                         float: left;
                                         width: 50%;
                                         margin: 1em 1em 0 0;
                                         margin-left: 40%;
                                         padding: 1em;
                                         font-family: "SBL Greek";
                                         font-size: @font-size-large;
                                         box-shadow: 0 0 6px rgba(0,0,0,0.5);

                img                     {max-height: 260px;
                }
                #slides_btn,
                #instructions_btn,
                #readable_btn           {position: relative;
                                         float: left;
                                         display: inline-block;
                                         margin-right: 1em;
                                         text-transform: capitalize;
                                         font-size: @font-size-small;
                                         font-family: @sansFonts;
                                         /*cursor: pointer;*/
                }
                a.btn                   {font-family: @sansFonts;
                }
                .path-counter,
                .prompt-editlinks       {font-size: @font-size-small;
                                         font-family: @sansFonts;
                }
                table                   {width: 100%;
                                         margin: 0;
                    input[type=text]    {width: 100%;
                    }
                    input[type=submit]  {font-family: @sansFonts;
                    }
                    td.w2p_fw           {padding-left: 0;
                    }
                    td.w2p_fl           {display: none;
                    }
                }
            }
        }
    }
}

/*-- reporting --------------------------------------------------*/
body.reporting                      {
    #masthead                       {display: none;
    }
}

/*-- reporting --------------------------------------------------*/
body.listing                        {
    #masthead                       {display: none;
    }

}


/*-- user --------------------------------------------------*/
body.user                           {
    #masthead                       {display: none;
    }
    .table-condensed > tbody        {
        tr                          {
            td                      {text-align: center;
            }
            td.week-counts-0,
            td.week-counts-1        {background-color: #efefef;
            }
            td.error                {color: red;
            }
            td.button_column        {width: 110px;
                                     min-width: 110px;
            }
        }
    }
}
/* ... */

